<resources>
    <string name="app_name">Pulse</string>
    <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
    <string name="app_title">Pulse</string>
    <string name="shortcut_compose_short">New Message</string>
    <string name="shortcut_compose_long">Start a new conversation!</string>
    <string name="menu_conversations">Conversation list</string>
    <string name="menu_archived_conversations">Archived conversations</string>
    <string name="menu_schedule">Scheduled messages</string>
    <string name="menu_mute_contacts">Blacklist</string>
    <string name="menu_invite">Invite friends</string>
    <string name="menu_feature_settings">Advanced Features</string>
    <string name="menu_settings">Global Settings</string>
    <string name="menu_mms_configuration">MMS Configuration</string>
    <string name="menu_account">My account</string>
    <string name="menu_device_texting">Text from any device</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_mobile_only">Mobile Only</string>
    <string name="menu_snooze">Snooze notifications</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_view_contact">View contact</string>
    <string name="menu_view_contacts">View contacts</string>
    <string name="menu_view_media">View media</string>
    <string name="menu_delete_conversation">Delete conversation</string>
    <string name="menu_archive_conversation">Archive Conversation</string>
    <string name="menu_move_to_inbox">Move to Inbox</string>
    <string name="menu_conversation_information">Conversation information</string>
    <string name="menu_conversation_blacklist">Blacklist contact</string>
    <string name="menu_conversation_schedule">Schedule a message</string>
    <string name="menu_contact_settings">Contact settings</string>
    <string name="menu_group_settings">Group settings</string>
    <string name="menu_snooze_off">Off</string>
    <string name="menu_snooze_1">1 hour</string>
    <string name="menu_snooze_2">2 hours</string>
    <string name="menu_snooze_4">4 hours</string>
    <string name="menu_snooze_8">8 hours</string>
    <string name="menu_snooze_24">24 hours</string>
    <string name="menu_snooze_72">72 hours</string>
    <string name="menu_snooze_custom">Pick a time</string>
    <string name="no_messages">No messages</string>
    <string name="no_messages_summary">Start a new conversation or just enjoy your day!</string>
    <string name="close">Close</string>
    <string name="pinned">Pinned</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">This week</string>
    <string name="last_month">This month</string>
    <string name="older">Older</string>
    <string name="mark_section_as_read">Mark all %1$s as read</string>
    <string name="marking_section_as_read">Marking all %1$s as read</string>
    <plurals name="conversations_deleted">
        <item quantity="one">%1$d conversation deleted</item>
        <item quantity="other">%1$d conversations deleted</item>
    </plurals>
    <plurals name="conversations_archived">
        <item quantity="one">%1$d conversation archived</item>
        <item quantity="other">%1$d conversations archived</item>
    </plurals>
    <plurals name="conversations_unarchived">
        <item quantity="one">%1$d conversation moved to inbox</item>
        <item quantity="other">%1$d conversations moved to inbox</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="enter_search">Search for…</string>
    <string name="conversations">Conversations</string>
    <string name="messages">Messages</string>
    <string name="invite_friends_title">Love Pulse?</string>
    <string name="invite_friends_summary">So do we and so will others! We\'re trying to get it in
        as many hands as we can to continue making it the best product that it can be and by
        inviting your friends to try, you\'re helping with this! \n\nSelect the friends below that
        you\'d like to send the app to and it will send them an SMS with a short description and
        a link to download!</string>
    <string name="invite_friends_sms">I started using a new texting app and I think
        you\'ll like it! Plus it\'s free, so might as well download it:
        http://messenger.klinkerapps.com</string>
    <string name="type_message">Type message</string>
    <string name="type_message_to">Type message to %1$s</string>
    <string name="attach">Attach</string>
    <string name="select_sim">Select SIM</string>
    <string name="message_from">%1$s</string>
    <string name="message_from_bullet">%1$s  •</string>
    <string name="mms_image">MMS Image</string>
    <string name="now">Now</string>
    <string name="sending">Sending…</string>
    <string name="failed">Failed</string>
    <string name="delivered">Message delivered</string>
    <string name="attach_image">Attach Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="attach_gif">Attach GIF</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="attach_location">Attach Location</string>
    <string name="no_location_found">Could not find your location.</string>
    <string name="camera_permission_needed">The camera permission needs to be granted to take
        pictures!</string>
    <string name="take_picture">Snap Picture</string>
    <string name="flip_picture">Flip Camera</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="attached_image">Attached Image</string>
    <string name="remove_image">Remove Attached Image</string>
    <string name="edit_image">Edit Attached Image</string>
    <string name="permission_needed_for_action">Permissions needed for this action.</string>
    <string name="request_permission">Request Permission</string>
    <string name="no_messages_with_contact">You don\'t have any messages in this conversation yet,
        time to start it up!</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_content">Share content…</string>
    <string name="saved">Saved to /Download folder!</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="start_recording_audio">Press the button to start recording audio!</string>
    <string name="audio_recording_error">Error with recording :(</string>
    <string name="message_copied_to_clipboard">Copied to clipboard</string>
    <string name="view_details">View Details</string>
    <string name="delete">Delete</string>
    <string name="copy_message">Copy Text</string>
    <string name="resend">Resend</string>
    <string name="no_media">No media in this conversation!</string>
    <string name="error_decrypting">Error running decryption! Please view this message on your phone.</string>
    <string name="message_sending_failed">Failed to send message!</string>
    <string name="preparing_video">Preparing video&#8230;</string>
    <string name="delete_message">Delete this message?</string>
    <string name="forward_message">Forward Message</string>
    <string name="share_message">Share Message</string>
    <string name="copy_message_text">Copy Message Text</string>
    <string name="open_link_to_browser">Open Link to Browser</string>
    <string name="open_link_internal">Open Link Internally</string>
    <string name="copy_link">Copy Link</string>
    <string name="compose_message">Compose new message</string>
    <string name="send_message">Send message</string>
    <string name="enter_contact_name">Enter contact name</string>
    <string name="error_processing_vcard">Error processing vcard</string>
    <string name="permissions_needed">The app can\'t work without those permissions! You need to
        accept them before we can continue.</string>
    <string name="loading_messages">Optimizing…</string>
    <string name="loading_messages_summary">Just working on getting your messages into the app, it
        won\'t take long!</string>
    <string name="tooltip_got_it">Got It!</string>
    <string name="navigation_drawer_conversation_hint">More options for this conversation are stored in the navigation drawer.</string>
    <string name="onboarding_title_1">Messaging Re-imagined</string>
    <string name="onboarding_title_2">Available Everywhere</string>
    <string name="onboarding_title_3">Powerful Customization</string>
    <string name="onboarding_content_1">"Smooth, fluid layouts with a powerful design and seamless integration.
        Pulse puts your conversations front and center."</string>
    <string name="onboarding_content_2">Message from your tablet, computer, watch, or any other connected devices.</string>
    <string name="onboarding_content_3">Pin, mute, theme, and customize notifications for any contacts you are chatting with. Make Pulse yours.</string>
    <string name="message_anywhere_onboarding_title_1">Message Anywhere</string>
    <string name="message_anywhere_onboarding_title_2">Subscription or Single Payment</string>
    <string name="message_anywhere_onboarding_title_3">Week Long Trial</string>
    <string name="message_anywhere_onboarding_content_1">Seamlessly integrates with any device (tablet, watch, TV, web, native Google Chrome, and Firefox apps) to support SMS and MMS from anywhere!</string>
    <string name="message_anywhere_onboarding_content_2">Insanely low pricing options to pay when you need it: $10.99 for life, $5.99 per year, $1.99 for 3 months, or $0.99 per month. Less than a cup of coffee.</string>
    <string name="message_anywhere_onboarding_content_3">Use the Android app, FREE (forever!) on your phone, or start texting from all your devices with a ONE WEEK free trial.</string>
    <string name="start_trial">Start\nTrial</string>
    <string name="not_now">Not\nNow</string>
    <string name="onboarding_done">Done</string>
    <string name="notification_ticker">New message from %1$s</string>
    <plurals name="new_conversations">
        <item quantity="one">%1$d new conversation</item>
        <item quantity="other">%1$d new conversations</item>
    </plurals>
    <plurals name="new_messages">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <string name="read">Read</string>
    <string name="reply">Reply</string>
    <string name="reply_to">Reply to %1$s</string>
    <string name="call">Call</string>
    <string-array name="reply_choices">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
        <item>OK</item>
        <item>Thanks</item>
    </string-array>
    <string name="new_mms_message">New MMS message</string>
    <string name="you">You</string>
    <string name="new_message">New Message</string>
    <string name="received_new_message">You received a new text!</string>
    <string name="media">Media</string>
    <string name="changelog">Changelog</string>
    <string name="subscriptions">Subscription are billed after the seven day trial and can be changed/cancelled at any time:</string>
    <string name="billed_immediately">This is billed immediately.</string>
    <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
    <string name="lifetime_purchase_summary">Pay once, and never again!</string>
    <string name="yearly_purchase">$5.99 every year</string>
    <string name="yearly_purchase_summary">The best deal.</string>
    <string name="three_month_purchase">$1.99 every three months</string>
    <string name="three_month_purchase_summary">Can\'t go wrong with this one.</string>
    <string name="monthly_purchase">$0.99 every month</string>
    <string name="monthly_purchase_summary">Just want to try? No problem.</string>
</resources>