<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Jacob Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_snooze_off"
        android:id="@+id/menu_snooze_off"/>

    <item android:title="@string/menu_snooze_1"
        android:id="@+id/menu_snooze_1"/>

    <item android:title="@string/menu_snooze_2"
        android:id="@+id/menu_snooze_2"/>

    <item android:title="@string/menu_snooze_4"
        android:id="@+id/menu_snooze_4"/>

    <item android:title="@string/menu_snooze_8"
        android:id="@+id/menu_snooze_8"/>

    <item android:title="@string/menu_snooze_24"
        android:id="@+id/menu_snooze_24"/>

    <item android:title="@string/menu_snooze_72"
        android:id="@+id/menu_snooze_72"/>

</menu>