<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_delete_messages"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share_message"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_copy_message"
        android:title="@string/copy_message"
        android:icon="@drawable/ic_copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_message_details"
        android:title="@string/view_details"
        android:icon="@drawable/ic_info"
        app:showAsAction="always" />

</menu>