<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Jacob Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/primary_section"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_view_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_view_contacts"/>

        <item
            android:id="@+id/drawer_delete_conversation"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_delete_conversation"/>

        <item
            android:id="@+id/drawer_conversation_information"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_conversation_information"/>

    </group>

    <group android:id="@+id/other_section">

        <item
            android:id="@+id/drawer_contact_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_group_settings"/>

    </group>

</menu>