<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lifetime"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="9dp"
            android:src="@drawable/ic_reward"
            android:tint="@color/primaryText"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/lifetime_purchase"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <TextView
                android:text="@string/lifetime_purchase_summary"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

            <TextView
                android:text="@string/billed_immediately"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:text="@string/subscriptions"
        android:textSize="13sp"
        android:textColor="@color/primaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:id="@+id/yearly"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="9dp"
            android:src="@drawable/ic_payment_yearly"
            android:tint="@color/primaryText"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/yearly_purchase"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/yearly_purchase_summary"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/three_months"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="9dp"
            android:src="@drawable/ic_payment_three_month"
            android:tint="@color/primaryText"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/three_month_purchase"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/three_month_purchase_summary"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthly"
        android:background="?selectableItemBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="9dp"
            android:src="@drawable/ic_payment_monthly"
            android:tint="@color/primaryText"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/monthly_purchase"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/monthly_purchase_summary"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>