<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Jacob Klinker
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryLight"
            android:id="@+id/widget_empty">

            <ImageView
                android:layout_width="98dp"
                android:layout_height="98dp"
                android:src="@drawable/ic_inbox"
                android:tint="@color/emptyIconTint"
                android:contentDescription="@string/no_messages" />

            <TextView
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/emptyTextPrimary"
                android:textSize="20sp"
                android:text="@string/no_messages"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:textColor="@color/emptyTextSecondary"
                android:textSize="14sp"
                android:text="@string/no_messages_summary"
                android:gravity="center_horizontal" />

        </LinearLayout>


    </FrameLayout>

</LinearLayout>